--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,37 @@
-<ion-header [translucent]="true">
+<!-- <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
       Tab 1
     </ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content [fullscreen]="true">
+<!-- <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
-</ion-content>
+</ion-content> -->
+
+<ion-content [fullscreen]="true">
+ 
+  <ion-card>
+    <!-- <ion-card-header>
+      <ion-card-title> 2,000,000 XAF</ion-card-title>
+      <ion-card-subtitle>Solde</ion-card-subtitle>
+    </ion-card-header> -->
+  
+    <ion-card-content>
+      <div class="cardre">
+        <span class="solde">Solde</span>
+        <span class="amont">2,000,000 XAF</span>
+
+        <h1 class="text-3xl font-bold underline">
+          Hello world!
+        </h1>
+      </div>
+    </ion-card-content>
+  </ion-card>
+</ion-content> 
