--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,13 +1,3 @@
-.cadre{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 16px;
-}
-.solde{
-
-}
-.amont{
-
+ion-content{
+    --background-color:#6941C6 ;
 }
