--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true" class="overflow-y-scroll scrollbar-hide">
 
-    <div class="container p-3 mt-10 overflow-y-scroll scrollbar-hide">
+    <div class="container p-[16px] mt-10 overflow-y-scroll scrollbar-hide">
   
       <div >
         <div class="heading mt-5">
