--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -24,9 +24,14 @@
   </div>
 
  
-  <ion-modal trigger="open-modal" [initialBreakpoint]="0.8" [breakpoints]="[0, 0.5]">
+  <!-- <ion-modal trigger="open-modal" [initialBreakpoint]="0.8" [breakpoints]="[0, 0.5]">
     <ng-template>
      
+    </ng-template>
+  </ion-modal> -->
+  <ion-modal trigger="open-modal" [initialBreakpoint]="0.8"  [breakpoints]="[0, 1]">
+    <ng-template>
+      <div class="block">Block of Content</div>
     </ng-template>
   </ion-modal>
 
