--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,14 +1,20 @@
 <ion-header>
   <ion-toolbar>
     <ion-back-button slot="start"></ion-back-button>
+
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
+  
 
-  <div class="py-2">
+  <div class="">
+
+  </div>
+
+  <div class="p-[30px] flex flex-col gap-[20px]">
     <div class="flex justify-center flex-col text-center mt-[4em] mb-[36px] ">
-      <h1 class="font-syneBold text-black text-2xl text-[28px]">Bienvenue sur Kiza!</h1>
-      <p class="font-LufgaRegular text-sm text-neutral-500">Veuillez vous connecter à votre compte.</p>
+      <h1 class="font-syneBold text-black text-2xl text-[28px]">Welcome to  Kiza-Cash!</h1>
+      <p class="font-LufgaRegular text-sm text-neutral-500">Login</p>
     </div>
     <br />
 
