--- a/src/app/auth/signup/signup.page.html
+++ b/src/app/auth/signup/signup.page.html
@@ -1,22 +1,18 @@
 
-<!--<ion-header  color="white">-->
-<!--  <ion-toolbar class="bg-white"  >-->
 
-<!--    <ion-back-button slot="start" ></ion-back-button>-->
+<ion-content [fullscreen]="true"  >
 
-<!--  </ion-toolbar>-->
-<!--</ion-header>-->
-
-<ion-content [fullscreen]="true"  class="p-5">
+  <div class=" w-full h-full flex flex-col ">
 
 
-    <div class="flex justify-center flex-col p-5   " *ngIf="step < 3">
+    <div class=" flex-[0.3] flex justify-center item-center flex-col " *ngIf="step < 3">
       <div style="margin-left: -20px" class="w-[120%]  bg-secondary-100  z-10 h-[6px] mb-3 ">
-        <div class="bg-secondary-500 h-[6px] z-10" [style.width]="progress()" ></div>
+        <div class="bg-secondary-500 h-[6px] z-10" [style.width]="progress()"></div>
       </div>
-      <h1 class="font-syneBold text-black text-[28px]  ">Informations personnelles.!</h1>
-      <p class="font-LufgaRegular text-sm text-neutral-500">Saisissez les différents renseignements qui se
-        trouvent en dessous de . 👇 </p>
+     
+      <h1 class="font-syneBold text-white text-[30px] text-center font-bold">signUp</h1>
+      <p class="font-LufgaRegular text-md text-neutral-500 text-center"> 👇 
+      </p>
     </div>
 
     <br/>
@@ -24,11 +20,11 @@
 
 
 
-     <form  class="flex flex-col p-5  items-stretch h-full " [formGroup]="userForm"  (ngSubmit)="signUp()">
+     <form  class=" w-full flex-1 flex flex-col  w-full  px-[30px] py-[60px] " [formGroup]="userForm"  (ngSubmit)="signUp()">
 
-       <div class=" ">
+       <div class=" flex flex-col w-full justify-between h-full ">
          <div>
-           <div class=" border rounded pl-2 pr-2  mb-5 ">
+           <div class=" border rounded pl-2 pr-2  mb-5 border-primary-600 ">
              <ion-input
                name="firstname"
                type="text"
@@ -37,7 +33,7 @@
                [errorText]="FirstNameError"
              ></ion-input>
            </div>
-           <div class=" border rounded pl-2  pr-2 mb-5 ">
+           <div class=" border rounded pl-2  pr-2 mb-5  border-primary-600">
              <ion-input
                name="lastname"
                type="text"
@@ -45,7 +41,7 @@
                placeholder="Prenom"
                [errorText]="LastNameError"></ion-input>
            </div>
-           <div class=" border rounded pl-2 pr-2 mb-5 ">
+           <div class=" border rounded pl-2 pr-2 mb-5 border-primary-600 ">
              <ion-input
                name="email"
                type="email"
@@ -53,7 +49,7 @@
                errorText="{{EmailError}}"
                placeholder="E-mail"></ion-input>
            </div>
-           <div class=" border rounded pl-2 pr-2 mb-5 ">
+           <div class=" border rounded pl-2 pr-2 mb-5 border-primary-600">
              <ion-input
                name="password"
                type="password"
@@ -61,10 +57,10 @@
                errorText="{{PasswordError}}"
                placeholder="Password"></ion-input>
            </div>
-           <div class=" border rounded pl-2 pr-2 mb-5 ">
+           <div class=" border rounded pl-2 pr-2 mb-5 border-primary-600">
              <ion-select
                name="email"
-               class="w-full mt-2"
+               class="w-full"
                formControlName="gender"
                placeholder="Genre"
                label-placement="floating"
@@ -75,12 +71,17 @@
            </div>
          </div>
 
-         <ion-button  [disabled]="userForm.invalid" class="  font-syneBold bg-green-700 rounded w-full h-12 mt-[40%]" type="submit" >
-           <div class="text-white">Continuer</div>
+         <ion-button  [disabled]="userForm.invalid" class=" font-syneBold  rounded w-full h-14 mt-[40px]" type="submit" >
+           <div class="text-white">signUp</div>
          </ion-button>
        </div>
 
      </form>
+
+
+  </div>
+
+  
 
 
 
