--- a/src/app/auth/login/login.page.scss
+++ b/src/app/auth/login/login.page.scss
@@ -1,3 +1,7 @@
+ion-content{
+  --background:#7F56D9;
+}
+
 app-login{
   font-size: small;
   color: grey;
@@ -21,6 +25,11 @@ ion-input {
   font-family: LufgaRegular;
   color: #808C91;
 
+}
+
+ion-icon{
+  color:white;
+  font-size: 25px;
 }
 
 .auto-input{
@@ -86,6 +95,7 @@ ion-input {
 
 .social-auth .ios .button .button-solid .ion-activatable .ion-focusable .hydrated{
   border-radius: 10px;
+  background: none;
   :host(.button-full:not(.button-round)) .button-native {
     border-radius: 10px;
     border-right-width: 0px;
@@ -94,9 +104,21 @@ ion-input {
 }
 
 ion-button {
-  --border-radius: 10px  !important;
-  --background: transparent;
-  --box-shadow: none;
-  color: black;
+  --border-radius: 30px  !important;
+  --box-shadow: #221237;
+  color: #7F56D9;
+  --background: #7F56D9;
 
+}
+
+.icon-button{
+  --background: none;
+
+}
+
+form{
+  margin: auto;
+  background-color: whitesmoke;
+  border-top-left-radius: 30px;
+  border-top-right-radius:30px ;
 }
