--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true" class="overflow-y-scroll scrollbar-hide">
 
-    <div class="container p-[16px] mt-10 overflow-y-scroll scrollbar-hide">
+    <div class="container p-[16px] overflow-y-scroll scrollbar-hide">
   
       <div >
         <div class="heading mt-5">
@@ -15,7 +15,6 @@
               <h3 class=" text-neutral-500 font-LufgaRegular text-[10px] ">{{'Afficher le profil'}}</h3>
             </div>
   
-  <!--          <ion-icon size="small" [src]="assets.icons.arrow_right" ></ion-icon>-->
           </div>
         </div>
   
