--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -63,7 +63,7 @@
       </div>
     </ion-buttons>
 
-    <div (click)="profile.present()" class="absolute w-[30px] right-4 top-[7px] h-[30px] rounded-full bg-center bg-no-repeat bg-cover"
+    <div (click)="userProfile.present()" class="absolute w-[30px] right-4 top-[7px] h-[30px] rounded-full bg-center bg-no-repeat bg-cover"
       [style.background-image]="'url(../../assets/img/person.svg)'">
     </div>
 
@@ -81,7 +81,7 @@
           KIZA solde
         </div>
 
-        <div class="text-white text-[22px] font-sonaSemiBold mt-2">
+        <div class="text-white text-[22px] font-sonaSemiBold mt-2 " [ngClass]="!show ? 'blur-sm' : 'blur-none' " >
 
           {{ '600000' | number}} CFA
 
@@ -89,11 +89,10 @@
       </div>
 
       <div
-        class=" absolute top-3 right-3 w-[94px] h-7 pl-2.5 pr-4 py-2.5 bg-violet-50 rounded-[40px] justify-center items-center gap-2 inline-flex">
-        <div class="w-4 h-4 relative">
-
-        </div>
-        <div class="text-center text-violet-500 text-[10px] font-sonaMedium whitespace-nowrap">Voir le solde</div>
+      (click)="show = !show"
+        class=" absolute top-3 right-3  h-7 pl-2.5 pr-4 py-2.5 bg-violet-50 rounded-[40px] justify-center items-center gap-2 inline-flex">
+        
+        <div class="text-center text-violet-500 text-[10px] font-sonaMedium whitespace-nowrap"> {{show ? 'Voir le solde' : 'Masquer le solde'}} </div>
       </div>
 
       <div class="w-full absolute bottom-4 right-0 left-0 flex items-center justify-center">
@@ -379,121 +378,204 @@
 
 
 
-
-
-  <ion-modal #profile [initialBreakpoint]="1" [breakpoints]="[0, 1]">
+  <ion-modal #contactImport [initialBreakpoint]="1" [breakpoints]="[0, 1]">
     <ng-template>
+      <ion-content class="ion-padding">
+      <div class="mb-[30px] w-full">
+        <div class="absolute top-4 right-4" (click)="contactImport.dismiss()">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M15.7123 16.773L7.22706 8.28777C6.93714 7.99785 6.93714 7.51702 7.22706 7.22711C7.51697 6.93719 7.9978 6.93719 8.28772 7.22711L16.773 15.7124C17.0629 16.0023 17.0629 16.4831 16.773 16.773C16.4831 17.063 16.0023 17.063 15.7123 16.773Z" fill="#101010"/>
+            <path d="M7.227 16.773C6.93709 16.4831 6.93709 16.0023 7.227 15.7124L15.7123 7.22711C16.0022 6.93719 16.483 6.93719 16.7729 7.22711C17.0629 7.51702 17.0629 7.99785 16.7729 8.28777L8.28766 16.773C7.99775 17.063 7.51692 17.063 7.227 16.773Z" fill="#101010"/>
+            </svg>
+            
+        </div>
+        <div class="w-full text-center text-neutral-800 text-lg font-bold leading-[44.80px] font-sonaSemiBold">Contacts </div>
+        <div class="w-full text-center text-neutral-400 text-sm font-bold leading-[44.80px] font-sonaSemiBold">Enregistrer un beneficiaire en l'important dans vos contacts </div>
+
+      </div>
+        <div class="mt-[16px]">
+
+          <div class="mt-6 px-4">
+         <div *ngFor="let items of contactPhone; let i = index">
+          <ion-radio-group  [(ngModel)]="benId" name="benId"  #benfValue (ionChange)="setBenf(benfValue.value)" id="{{i}}" name="{{i}}">
+            <ion-radio  class="w-full" mode="md" slot="start" value="{{items.numberWithCode}}">
+              <div class="w-[100%]  my-[16px] flex items-center justify-start gap-[50px]">
+
+                <div class="flex items-center justify-between w-full  border-b-[.001rem]  border-b-gray-200 pb-4">
+        
+                  <div>
+        
+                    <div class="flex gap-3 items-center">
+                      <div
+                      class="w-[50px] h-[50px] px-3 py-4 bg-green-50 rounded-full flex-col justify-center items-center inline-flex">
+                       
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g opacity="0.4">
+                <path d="M12.12 13.53C12.1 13.53 12.07 13.53 12.05 13.53C12.02 13.53 11.98 13.53 11.95 13.53C9.68001 13.46 7.98001 11.69 7.98001 9.50998C7.98001 7.28998 9.79001 5.47998 12.01 5.47998C14.23 5.47998 16.04 7.28998 16.04 9.50998C16.03 11.7 14.32 13.46 12.15 13.53C12.13 13.53 12.13 13.53 12.12 13.53ZM12 6.96998C10.6 6.96998 9.47001 8.10998 9.47001 9.49998C9.47001 10.87 10.54 11.98 11.9 12.03C11.93 12.02 12.03 12.02 12.13 12.03C13.47 11.96 14.52 10.86 14.53 9.49998C14.53 8.10998 13.4 6.96998 12 6.96998Z" fill="#39A935"/>
+                <path d="M12 22.7498C9.30999 22.7498 6.73999 21.7498 4.74999 19.9298C4.56999 19.7698 4.48999 19.5298 4.50999 19.2998C4.63999 18.1098 5.37999 16.9998 6.60999 16.1798C9.58999 14.1998 14.42 14.1998 17.39 16.1798C18.62 17.0098 19.36 18.1098 19.49 19.2998C19.52 19.5398 19.43 19.7698 19.25 19.9298C17.26 21.7498 14.69 22.7498 12 22.7498ZM6.07999 19.0998C7.73999 20.4898 9.82999 21.2498 12 21.2498C14.17 21.2498 16.26 20.4898 17.92 19.0998C17.74 18.4898 17.26 17.8998 16.55 17.4198C14.09 15.7798 9.91999 15.7798 7.43999 17.4198C6.72999 17.8998 6.25999 18.4898 6.07999 19.0998Z" fill="#39A935"/>
+                <path d="M12 22.75C6.07 22.75 1.25 17.93 1.25 12C1.25 6.07 6.07 1.25 12 1.25C17.93 1.25 22.75 6.07 22.75 12C22.75 17.93 17.93 22.75 12 22.75ZM12 2.75C6.9 2.75 2.75 6.9 2.75 12C2.75 17.1 6.9 21.25 12 21.25C17.1 21.25 21.25 17.1 21.25 12C21.25 6.9 17.1 2.75 12 2.75Z" fill="#39A935"/>
+                </g>
+                </svg>
+                      </div>
+        
+                      <div>
+                        <div class=" font-sonaSemiBold text-base">{{items?.name}}</div>
+                        <span class=" font-sonaRegular text-sm text-gray-300 pt-1">{{items?.numberWithCode}}</span>
+                      </div>
+          
+                    </div>
+                  
+                  </div>
+        
+             
+                </div>
+        
+        
+          
+              </div>
+    
+            </ion-radio>
+       
+
+          </ion-radio-group>
+
+
+         </div>
+          
+         </div>
+         </div>
+
+
+      </ion-content>
+
+      <ion-footer>
+        <ion-toolbar class="my-4">
+          <div class="w-full relative">
+            <ion-button (click)="addContactPhone()" id="subData" class="my-[20px] rounded-lg h-[41px] w-full text-base font-interBold" [style.--background]="'#8b5cf6'"  >
+              <div class="text-center text-white text-[16px] font-semibold font-robotoBold">Continuer</div>
+              <ion-spinner class="absolute right-4 text-while" *ngIf="loader"  name="bubbles"></ion-spinner>
+            </ion-button>
+          </div>
+        </ion-toolbar>
+      </ion-footer>
+    </ng-template>
+  </ion-modal>
+
+  <ion-modal #userProfile [initialBreakpoint]="1" [breakpoints]="[0, 1]">
+    <ng-template>
+      
       <ion-content [fullscreen]="true"  >
 
-        <div class=" w-full h-full flex flex-col">
-      
-      
-          <div class=" flex-[0.1] flex justify-center item-center flex-col ">
-          
-            <div class="flex items-center justify-center">
-              <img src="../../../assets/icon/kiza.png" alt="" srcset="" class="w-[200px] h-[200px]">
-      
-            </div>
-           
-          </div>
-      
-          <br/>
-      
-      
-      
-      
-           <div class=" w-full flex-1 flex flex-col  w-full  px-[30px] py-[40px] form shadow-xl  gap-[30px]" >
-            
-            <div class="flex items-start justify-start gap-[10px]">
-              <div class="w-[35px] h-[35px] rounded-full bg-primary-600">
-      
-              </div>
-              <h1 class=" text-[25px] text-gray-900 font-bold text-center">My Profil</h1> 
-      
-            </div>
-      
-      
-      
-             <div class=" flex flex-col w-full justify-between h-full ">
-      
-               <div>
-      
-      
-      
-                <div class="flex flex-col gap-2 ">
-                  <span>FirstName*</span>
-                  <div class=" border rounded pl-2 pr-2  mb-5 border-primary-600 ">
-                    <ion-input
-                    readonly="true"
-                      name="firstname"
-                      type="text"
-                      [(ngModel)]="userForm.firstName"
-                      placeholder="Nom"
-                     
-                    ></ion-input>
-                  </div>
-                </div>
-                 
-      
-                <div class="flex flex-col gap-2 ">
-                  <span>lastName*</span>
-                  <div class=" border rounded pl-2 pr-2  mb-5 border-primary-600 ">
-                    <ion-input
-                    readonly="true"
-                      name="firstname"
-                      type="text"
-                      [(ngModel)]="userForm.lastName"
-                      placeholder="Nom"
-                     
-                    ></ion-input>
-                  </div>
-                </div>
-                <div class="flex flex-col gap-2 ">
-                  <span>Email*</span>
-                  <div class=" border rounded pl-2 pr-2  mb-5 border-primary-600 ">
-                    <ion-input
-                    readonly="true"
-                      name="firstname"
-                      type="text"
-                      [(ngModel)]="userForm.email"
-                      placeholder="Nom"
-                     
-                    ></ion-input>
-                  </div>
-                </div>
-                <div class="flex flex-col gap-2 ">
-                  <span>Gender*</span>
-                  <div class=" border rounded pl-2 pr-2  mb-5 border-primary-600 ">
-                    <ion-input
-                    readonly="true"
-                      name="firstname"
-                      type="text"
-                      [(ngModel)]="userForm.gender"
-                      placeholder="Nom"
-                     
-                    ></ion-input>
-                  </div>
-                </div>
-                
-      
-      
-                 
-               </div>
-      
-             </div>
-      
-            </div>
-      
-      
-        </div>
-      
+      <div class=" w-full h-full flex flex-col">
+    
+    
+        <div class=" flex-[0.1] flex justify-center item-center flex-col ">
         
+          <div class="flex items-center justify-center">
+            <img src="../../../assets/icon/kiza.png" alt="" srcset="" class="w-[200px] h-[200px]">
+    
+          </div>
+         
+        </div>
+    
+        <br/>
+    
+    
+    
+    
+         <div class=" w-full flex-1 flex flex-col  w-full  px-[30px] py-[40px] form shadow-xl  gap-[30px]" >
+          
+          <div class="flex items-start justify-start gap-[10px]">
+            <div class="w-[35px] h-[35px] rounded-full bg-primary-600">
+    
+            </div>
+            <h1 class=" text-[25px] text-gray-900 font-bold text-center">My Profil</h1> 
+    
+          </div>
+    
+    
+    
+           <div class=" flex flex-col w-full justify-between h-full ">
+    
+             <div>
+    
+    
+    
+              <div class="flex flex-col gap-2 ">
+                <span>FirstName*</span>
+                <div class=" border rounded pl-2 pr-2  mb-5 border-primary-600 ">
+                  <ion-input
+                  readonly="true"
+                    name="firstname"
+                    type="text"
+                    [(ngModel)]="userForm.firstName"
+                    placeholder="Nom"
+                   
+                  ></ion-input>
+                </div>
+              </div>
+               
+    
+              <div class="flex flex-col gap-2 ">
+                <span>lastName*</span>
+                <div class=" border rounded pl-2 pr-2  mb-5 border-primary-600 ">
+                  <ion-input
+                  readonly="true"
+                    name="firstname"
+                    type="text"
+                    [(ngModel)]="userForm.lastName"
+                    placeholder="Nom"
+                   
+                  ></ion-input>
+                </div>
+              </div>
+              <div class="flex flex-col gap-2 ">
+                <span>Email*</span>
+                <div class=" border rounded pl-2 pr-2  mb-5 border-primary-600 ">
+                  <ion-input
+                  readonly="true"
+                    name="firstname"
+                    type="text"
+                    [(ngModel)]="userForm.email"
+                    placeholder="Nom"
+                   
+                  ></ion-input>
+                </div>
+              </div>
+              <div class="flex flex-col gap-2 ">
+                <span>Gender*</span>
+                <div class=" border rounded pl-2 pr-2  mb-5 border-primary-600 ">
+                  <ion-input
+                  readonly="true"
+                    name="firstname"
+                    type="text"
+                    [(ngModel)]="userForm.gender"
+                    placeholder="Nom"
+                   
+                  ></ion-input>
+                </div>
+              </div>
+              
+    
+    
+               
+             </div>
+    
+           </div>
+    
+          </div>
+    
+    
+      </div>
+    
       
-      
-      
-      
-      
-      </ion-content>
+    
+    
+    
+    
+    
+    </ion-content>
+     
     </ng-template>
   </ion-modal>
 
