--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -114,37 +114,27 @@
           <div
           (click)="topup.present()"
           class="w-[61px] h-[58px] px-3 py-4 bg-green-50 rounded-[17px] flex-col justify-center items-center inline-flex">
-         
-       
-
-
-            <svg   viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <g id="Solid/Interface/Arrow right">
-              <path id="Icon" d="M16.1317 14.3466C16.4246 14.0537 16.8995 14.0537 17.1924 14.3466C17.4853 14.6395 17.4853 15.1144 17.1924 15.4073L13.1924 19.4073C12.8995 19.7002 12.4246 19.7002 12.1317 19.4073L8.13173 15.4073C7.83884 15.1144 7.83884 14.6395 8.13173 14.3466C8.42463 14.0537 8.8995 14.0537 9.19239 14.3466L11.9121 17.0663L11.9121 7.37695C11.9121 6.96274 12.2478 6.62695 12.6621 6.62695C13.0763 6.62695 13.4121 6.96274 13.4121 7.37695L13.4121 17.0663L16.1317 14.3466Z" fill="#39A935"/>
-              </g>
-              </svg>
-          
-          </div>
+          <svg  viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M6.5 18L18.5 6M18.5 6H9.5M18.5 6V15" stroke="#39A935" stroke-width="1.5" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg> </div>
 
           <div class="text-center text-gray-700 text-xs font-sonaMedium mt-4">Top Up</div>
         </div>
 
         <div>
-
-
           <div
           (click)="top_up.present()"
             class="w-[61px] h-[58px] px-3 py-4 bg-green-50 rounded-[17px] flex-col justify-center items-center inline-flex">
-         
-            <svg  viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M6.5 18L18.5 6M18.5 6H9.5M18.5 6V15" stroke="#39A935" stroke-width="1.5" stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
-          
+            <svg   viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g id="Solid/Interface/Arrow right">
+              <path id="Icon" d="M16.1317 14.3466C16.4246 14.0537 16.8995 14.0537 17.1924 14.3466C17.4853 14.6395 17.4853 15.1144 17.1924 15.4073L13.1924 19.4073C12.8995 19.7002 12.4246 19.7002 12.1317 19.4073L8.13173 15.4073C7.83884 15.1144 7.83884 14.6395 8.13173 14.3466C8.42463 14.0537 8.8995 14.0537 9.19239 14.3466L11.9121 17.0663L11.9121 7.37695C11.9121 6.96274 12.2478 6.62695 12.6621 6.62695C13.0763 6.62695 13.4121 6.96274 13.4121 7.37695L13.4121 17.0663L16.1317 14.3466Z" fill="#39A935"/>
+              </g>
+              </svg>
 
           </div>
 
-          <div class="text-center text-gray-700 text-xs font-sonaMedium mt-4">Retrait</div>
+          <div class="text-center text-gray-700 text-xs font-sonaMedium mt-4">Recharge</div>
         </div>
 
 
